Update A6 Frequent Queries :books:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -42,16 +42,13 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>hundreds per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-            SELECT username, email, gender, description
-            FROM plenum.UserTable;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT username, email, gender, description
+FROM plenum.UserTable;
+```
 
 <table>
   <tbody>
@@ -67,17 +64,14 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>hundreds per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT username, email, gender, description
-          FROM plenum.UserTable
-          WHERE UserTable.idUser= $idUser;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT username, email, gender, description
+FROM plenum.UserTable
+WHERE UserTable.idUser= $idUser;
+```
 
 <table>
   <tbody>
@@ -93,18 +87,15 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>hundreds per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT DISTINCT Task.title
-          FROM plenum.Assigned, plenum.Task, plenum.UserTable
-          WHERE Assigned.idUser=$idUser
-          AND Assigned.idTask = Task.idTask;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT DISTINCT Task.title
+FROM plenum.Assigned, plenum.Task, plenum.UserTable
+WHERE Assigned.idUser=$idUser
+AND Assigned.idTask = Task.idTask;
+```
 
 <table>
   <tbody>
@@ -120,19 +111,16 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT Project.name
-          FROM plenum.Project, plenum.Joined, plenum.UserTable
-          WHERE Project.idProject=Joined.idProject
-          AND Joined.idUser=UserTable.idUser
-          AND UserTable.idUser = $idUser;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT Project.name
+FROM plenum.Project, plenum.Joined, plenum.UserTable
+WHERE Project.idProject=Joined.idProject
+AND Joined.idUser=UserTable.idUser
+AND UserTable.idUser = $idUser;
+```
 
 <table>
   <tbody>
@@ -148,17 +136,14 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT premium
-          FROM plenum.UserTable
-          WHERE UserTable.idUser = $idUser;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT premium
+FROM plenum.UserTable
+WHERE UserTable.idUser = $idUser;
+```
 
 <table>
   <tbody>
@@ -174,18 +159,15 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT startDate, duration, name
-          FROM plenum.PremiumSignature, plenum.UserTable
-          WHERE UserTable.idUser= PremiumSignature.idUser
-          AND UserTable.idUser = $idUser;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT startDate, duration, name
+FROM plenum.PremiumSignature, plenum.UserTable
+WHERE UserTable.idUser= PremiumSignature.idUser
+AND UserTable.idUser = $idUser;
+```
 
 <table>
   <tbody>
@@ -201,17 +183,14 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT banned
-          FROM plenum.UserTable
-          WHERE UserTable.idUser = $idUser;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT banned
+FROM plenum.UserTable
+WHERE UserTable.idUser = $idUser;
+```
 
 <table>
   <tbody>
@@ -227,18 +206,15 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per month</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT startDate, duration, motive
-          FROM plenum.UserTable, plenum.BannedRecord
-          WHERE UserTable.idUser = $idUser
-          AND UserTable.idUser = BannedRecord.idUser;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT startDate, duration, motive
+FROM plenum.UserTable, plenum.BannedRecord
+WHERE UserTable.idUser = $idUser
+AND UserTable.idUser = BannedRecord.idUser;
+```
 
 <table>
   <tbody>
@@ -254,17 +230,14 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT creationDate, name, description
-          FROM plenum.Project
-          WHERE idProject = $idProject;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT creationDate, name, description
+FROM plenum.Project
+WHERE idProject = $idProject;
+```
 
 <table>
   <tbody>
@@ -280,17 +253,14 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT private
-          FROM plenum.Project
-          WHERE idProject = $idProject;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT private
+FROM plenum.Project
+WHERE idProject = $idProject;
+```
 
 <table>
   <tbody>
@@ -306,19 +276,16 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
-          FROM plenum.UserTable, plenum.Joined, plenum.Project
-          WHERE Joined.idProject=$idProject
-          AND Joined.role = 'Owner'
-          AND Joined.idUser=UserTable.idUser;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
+FROM plenum.UserTable, plenum.Joined, plenum.Project
+WHERE Joined.idProject=$idProject
+AND Joined.role = 'Owner'
+AND Joined.idUser=UserTable.idUser;
+```
 
 <table>
   <tbody>
@@ -334,19 +301,16 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
-          FROM plenum.UserTable, plenum.Joined, plenum.Project
-          WHERE Joined.idProject=$idProject
-          AND Joined.role = 'Coordinator'
-          AND Joined.idUser=UserTable.idUser;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
+FROM plenum.UserTable, plenum.Joined, plenum.Project
+WHERE Joined.idProject=$idProject
+AND Joined.role = 'Coordinator'
+AND Joined.idUser=UserTable.idUser;
+```
 
 <table>
   <tbody>
@@ -362,19 +326,16 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
-          FROM plenum.UserTable, plenum.Joined, plenum.Project
-          WHERE Joined.idProject=$idProject
-          AND Joined.role = 'Member'
-          AND Joined.idUser=UserTable.idUser;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
+FROM plenum.UserTable, plenum.Joined, plenum.Project
+WHERE Joined.idProject=$idProject
+AND Joined.role = 'Member'
+AND Joined.idUser=UserTable.idUser;
+```
 
 <table>
   <tbody>
@@ -390,19 +351,16 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT ForumPost.title, ForumPost.creationDate, ForumPost.lastEditDate
-          FROM plenum.ForumPost, plenum.UserTable
-          WHERE ForumPost.idUser = UserTable.idUser
-          AND UserTable.idUser = $idUser
-          ORDER BY ForumPost.lastEditDate;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT ForumPost.title, ForumPost.creationDate, ForumPost.lastEditDate
+FROM plenum.ForumPost, plenum.UserTable
+WHERE ForumPost.idUser = UserTable.idUser
+AND UserTable.idUser = $idUser
+ORDER BY ForumPost.lastEditDate;
+```
 
 <table>
   <tbody>
@@ -418,17 +376,14 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT DISTINCT Reply.creationDate, Reply.content, Reply.idPost
-          FROM plenum.Reply, plenum.ForumPost, plenum.UserTable
-          WHERE Reply.idUser = $idUser;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT DISTINCT Reply.creationDate, Reply.content, Reply.idPost
+FROM plenum.Reply, plenum.ForumPost, plenum.UserTable
+WHERE Reply.idUser = $idUser;
+```
 
 <table>
   <tbody>
@@ -444,21 +399,18 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT title, deadline
-          FROM plenum.UserTable, plenum.Task, plenum.Assigned
-          WHERE UserTable.idUser = 1
-          AND Assigned.idUser = UserTable.idUser
-          AND Assigned.idTask = Task.idTask
-          AND deadline > CURRENT_DATE
-          ORDER BY deadline ASC;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT title, deadline
+FROM plenum.UserTable, plenum.Task, plenum.Assigned
+WHERE UserTable.idUser = 1
+AND Assigned.idUser = UserTable.idUser
+AND Assigned.idTask = Task.idTask
+AND deadline > CURRENT_DATE
+ORDER BY deadline ASC;
+```
 
 <table>
   <tbody>
@@ -474,19 +426,16 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT Task.title, Task.deadline
-          FROM plenum.Task, plenum.Project
-          WHERE Project.idProject = $idProject
-          AND Task.idProject = Project.idProject
-          AND Task.completed=false;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT Task.title, Task.deadline
+FROM plenum.Task, plenum.Project
+WHERE Project.idProject = $idProject
+AND Task.idProject = Project.idProject
+AND Task.completed=false;
+```
 
 <table>
   <tbody>
@@ -502,19 +451,16 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT Task.title, Task.deadline
-          FROM plenum.Task, plenum.Project
-          WHERE Project.idProject = $idProject
-          AND Task.idProject = Project.idProject
-          AND Task.completed=true;
-          </code>
-        </td>
-      </tr>
-    </tbody>
+  </tbody>
 </table>
+
+```SQL
+SELECT Task.title, Task.deadline
+FROM plenum.Task, plenum.Project
+WHERE Project.idProject = $idProject
+AND Task.idProject = Project.idProject
+AND Task.completed=true;
+```
 
 <table>
   <tbody>
@@ -540,6 +486,10 @@ This artefact contains the physical schema of the database, the identification a
     </tbody>
 </table>
 
+```SQL
+-- TODO
+```
+
 <table>
   <tbody>
       <tr>
@@ -554,17 +504,14 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>hundreds per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT title, creationDate,lastEditDate, description, deadline
-          FROM plenum.Task
-          WHERE Task.idTask= $idTask;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
+
+```SQL
+SELECT title, creationDate,lastEditDate, description, deadline
+FROM plenum.Task
+WHERE Task.idTask= $idTask;
+```
 
 <table>
   <tbody>
@@ -580,21 +527,16 @@ This artefact contains the physical schema of the database, the identification a
           <td><b>Query frequency</b></td>
           <td>hundreds per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          SELECT Comment.creationDate, Comment.lastEditDate, Comment.content, UserTable.name, Comment.idParent
-          FROM plenum.Comment, plenum.UserTable, plenum.Task
-          WHERE Task.idTask = $idTask
-          AND Comment.idUser = UserTable.idUser
-          AND Comment.idTask = Task.idTask;
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
 
-### 1.3. Frequent Updates
+```SQL
+SELECT Comment.creationDate, Comment.lastEditDate, Comment.content, UserTable.name, Comment.idParent
+FROM plenum.Comment, plenum.UserTable, plenum.Task
+WHERE Task.idTask = $idTask
+AND Comment.idUser = UserTable.idUser
+AND Comment.idTask = Task.idTask;
+```
 
 ### 1.3. Frequent Updates
 
@@ -619,7 +561,6 @@ This artefact contains the physical schema of the database, the identification a
 INSERT INTO UserTable (username, password, email, name, gender, address,institution, description, birthDate, idCountry)
 VALUES ($username, $password, $email, $name, $gender, $address, $institution, $description, $birthDate, $idCountry);
 ```
-
 
 <table>
   <tbody>
