fix A6 intro :ambulance:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1,6 +1,6 @@
 # A6: Indexes, triggers, user functions and population
 
-This artefact contains the physical schema of the database, the identification and characterisation of the indexes, the support of data integrity rules with triggers and the definition of the database user-defined functions. This artefact also contains the database's workload as well as the complete database creation script, including all SQL necessary to define all integrity constraints, indexes and triggers.
+This artefact contains the physical schema of the database, the identification and characterisation of the indexes, the support of data integrity rules with triggers and the definition of the database user-defined functions of our **Project Management** Web Application. This artefact also contains the database's workload as well as the complete database creation script, including all SQL necessary to define all integrity constraints, indexes and triggers.
 
 ## 1. Database Workload
 ### 1.1. Tuple Estimation
