Commented out revision history :gem:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -2411,11 +2411,11 @@ insert into plenum.bannedrecord (startDate, duration, motive, idUser, idAdmin) v
 ```
 [Link to the SQL script included in the repository.](https://github.com/mpcmarques/lbaw1743/blob/master/database/inserts.sql)
 
-## Revision history
+<!-- ## Revision history
 
 Changes made to the first submission:
 1. Item 1
-1. Item 2
+1. Item 2 -->
 
 ***
 
