--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -476,18 +476,16 @@ AND Task.completed=true;
           <td><b>Query frequency</b></td>
           <td>tens per day</td>
       </tr>
-      <tr>
-        <td colspan="2">
-          <code>
-          <!-- TODO -->
-          </code>
-        </td>
-      </tr>
     </tbody>
 </table>
 
 ```SQL
--- TODO
+SELECT Task.title, Task.deadline
+FROM plenum.Task, plenum.Project, plenum.Assigned
+WHERE Project.idProject = $idProject
+AND Task.idProject = Project.idProject
+AND Assigned.idTask = Task.idTask
+AND Assigned.idUser IS NULL;
 ```
 
 <table>
