added Task not Assigned :books:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -2352,6 +2352,7 @@ insert into plenum.task (creationDate, lastEditDate, title, description, deadlin
 insert into plenum.task (creationDate, lastEditDate, title, description, deadline, completed, completetionDate, idUser, idProject) values ('2018-01-19', '2017-04-25', 'Polarised secondary challenge', 'Curabitur at ipsum ac tellus semper interdum. Mauris ullamcorper purus sit amet nulla. Quisque arcu libero, rutrum ac, lobortis vel, dapibus at, diam.', '2018-05-25', true, '2018-05-29', 4, 4);
 insert into plenum.task (creationDate, lastEditDate, title, description, deadline, completed, completetionDate, idUser, idProject) values ('2017-03-25', '2017-05-29', 'Multi-tiered upward-trending hardware', 'Cras mi pede, malesuada in, imperdiet et, commodo vulputate, justo. In blandit ultrices enim. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.', '2018-05-08', false, NULL, 5, 5);
 
+insert into plenum.task (creationDate, lastEditDate, title, description, deadline, completed, completetionDate, idUser, idProject) values ('2017-09-03', NULL, 'Customizable neutral circuit II', 'Sed ante. Vivamus tortor. Duis mattis egestas metus.', '2018-06-04', false, NULL, 1, 1);
 --Assigned
 insert into plenum.assigned (idUser, idTask) values (1, 1);
 insert into plenum.assigned (idUser, idTask) values (2, 2);
