fixed SELECT19 :books:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -481,11 +481,12 @@ AND Task.completed=true;
 
 ```SQL
 SELECT Task.title, Task.deadline
-FROM plenum.Task, plenum.Project, plenum.Assigned
+FROM plenum.Task, plenum.Project
 WHERE Project.idProject = $idProject
 AND Task.idProject = Project.idProject
-AND Assigned.idTask = Task.idTask
-AND Assigned.idUser IS NULL;
+AND NOT EXISTS (SELECT Assigned.idTask
+              FROM plenum.Assigned
+             WHERE Task.idTask = Assigned.idTask);
 ```
 
 <table>
