added full-text-searches related queries

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1259,7 +1259,7 @@ CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);
     </tr>
     <tr>
       <td><b>Related queries</b></td>
-      <td>tbd</td>
+      <td>SELECT02</td>
     </tr>
     <tr>
       <td><b>Index relation</b></td>
@@ -1296,7 +1296,7 @@ CREATE INDEX search_username ON UserTable USING GIN (to_tsvector('english', user
     </tr>
     <tr>
       <td><b>Related queries</b></td>
-      <td>tbd</td>
+      <td>SELECT02</td>
     </tr>
     <tr>
       <td><b>Index relation</b></td>
@@ -1333,7 +1333,7 @@ CREATE INDEX search_user_name ON UserTable USING GIN (to_tsvector('english', nam
     </tr>
     <tr>
       <td><b>Related queries</b></td>
-      <td>tbd</td>
+      <td>SELECT04, SELECT09</td>
     </tr>
     <tr>
       <td><b>Index relation</b></td>
@@ -1370,7 +1370,7 @@ CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', na
     </tr>
     <tr>
       <td><b>Related queries</b></td>
-      <td>tbd</td>
+      <td>SELECT09</td>
     </tr>
     <tr>
       <td><b>Index relation</b></td>
@@ -1390,7 +1390,7 @@ CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', na
     </tr>
     <tr>
       <td><b>Justification</b></td>
-      <td>To improve performance of full text search while searching for project names; GisT because the project description is dynamic.</td>
+      <td>To improve performance of full text search while searching for project description; GisT because the project description is dynamic.</td>
     </tr>
   </tbody>
 </table>
@@ -1407,7 +1407,7 @@ CREATE INDEX search_project_description ON Project USING GIST (to_tsvector('engl
     </tr>
     <tr>
       <td><b>Related queries</b></td>
-      <td>tbd</td>
+      <td>SELECT17, SELECT18, SELECT19</td>
     </tr>
     <tr>
       <td><b>Index relation</b></td>
@@ -1444,7 +1444,7 @@ CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', title));
     </tr>
     <tr>
       <td><b>Related queries</b></td>
-      <td>tbd</td>
+      <td>SELECT17, SELECT18, SELECT19</td>
     </tr>
     <tr>
       <td><b>Index relation</b></td>
