Updated SQL on artifact :pencil2:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1246,7 +1246,7 @@ CREATE INDEX projectUser ON Joined USING hash(idUser);
 </table>
 
 ```SQL
-CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);  
+CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);
 ```
 ### 2.2. Full-text Search Indices
 
@@ -2017,6 +2017,233 @@ CREATE TABLE BannedRecord(
 	FOREIGN KEY(idAdmin) REFERENCES Admin(idAdmin),
 	CONSTRAINT min_time check (duration > interval '0 second')
 );
+
+/*Performance Indexes*/
+
+    /*User*/
+    DROP INDEX IF EXISTS emailUser;
+
+    CREATE INDEX emailUser ON UserTable USING hash (email);
+
+    /*Task*/
+    DROP INDEX IF EXISTS taskUser;
+    DROP INDEX IF EXISTS deadlineTask;
+
+    CREATE INDEX taskUser ON Task USING hash(idUser);
+    CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);
+
+    /*Project*/
+    DROP INDEX IF EXISTS projectUser;
+
+    CREATE INDEX projectUser ON Joined USING hash(idUser);
+
+/*Full-text Search Indexes*/
+
+    DROP INDEX IF EXISTS search_username;
+    DROP INDEX IF EXISTS search_user_name;
+    DROP INDEX IF EXISTS search_project_name;
+    DROP INDEX IF EXISTS search_project_description;
+    DROP INDEX IF EXISTS search_task_name;
+    DROP INDEX IF EXISTS search_task_description;
+
+    CREATE INDEX search_username ON UserTable USING GIN (to_tsvector('english', username));
+    CREATE INDEX search_user_name ON UserTable USING GIN (to_tsvector('english', name));
+    CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', name));
+    CREATE INDEX search_project_description ON Project USING GIST (to_tsvector('english', description));
+    CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', title));
+    CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', description));
+
+-- Only a User who Joined a Project can create Posts in it's Forum.
+DROP TRIGGER IF EXISTS onCreatePost ON plenum.ForumPost;
+
+CREATE OR REPLACE FUNCTION plenum.insertPost() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Joined
+      WHERE new.idUser = Joined.idUser AND new.idProject = Joined.idProject)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can post in its forum.';
+    END IF;
+    RETURN NEW;
+  END
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreatePost BEFORE INSERT ON plenum.ForumPost
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertPost();
+
+-- Only a User who Joined a Project can Reply in it's Forum.
+DROP TRIGGER IF EXISTS onCreateReply ON plenum.Reply;
+
+CREATE OR REPLACE FUNCTION plenum.insertReply() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Joined, plenum.ForumPost
+      WHERE new.idPost = ForumPost.idPost AND ForumPost.idProject = Joined.idProject AND new.idUser = Joined.idUser)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can reply to posts in its forum.';
+    END IF;
+    RETURN NEW;
+  END
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateReply BEFORE INSERT ON plenum.Reply
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertReply();
+
+-- Only a user who has Joined a Project can create Comments for a Project Task.
+DROP TRIGGER IF EXISTS onCreateComment ON plenum.Comment;
+
+CREATE OR REPLACE FUNCTION plenum.insertComent() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Joined, plenum.Task
+      WHERE new.idTask = Task.idTask AND Task.idProject = Joined.idProject AND new.idUser = Joined.idUser)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
+    END IF;
+    RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateComment BEFORE INSERT ON plenum.Comment
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertComent();
+
+-- Only a User who was Assigned to a Task can create a Close Request for it.
+DROP TRIGGER IF EXISTS onCreateCloseRequest ON plenum.CloseRequest;
+
+CREATE OR REPLACE FUNCTION plenum.insertCloseRequest() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Assigned
+      WHERE new.idTask = Assigned.idTask AND new.idUser = Assigned.idUser)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
+    END IF;
+    RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateCloseRequest BEFORE INSERT ON plenum.CloseRequest
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertCloseRequest();
+
+-- Only a User who Joined a Project can create Tasks for It.
+DROP TRIGGER IF EXISTS onCreateTask ON plenum.Task;
+
+CREATE OR REPLACE FUNCTION plenum.insertTask() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Joined
+      WHERE new.idUser = Joined.idUser AND new.idProject = Joined.idProject)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can create tasks for it.';
+    END IF;
+    RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateTask BEFORE INSERT ON plenum.Task
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertTask();
+
+-- Only a User who Joined a Project can be assigned to it's Tasks.
+DROP TRIGGER IF EXISTS onCreateAssigned ON plenum.Assigned;
+
+CREATE OR REPLACE FUNCTION plenum.insertAssigned() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Joined, plenum.Task
+      WHERE new.idUser = Joined.idUser AND new.idTask = Task.idTask AND Task.idProject = Joined.idProject)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can be assigned to its tasks.';
+    END IF;
+    RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateAssigned BEFORE INSERT ON plenum.Assigned
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertAssigned();
+
+-- A Project can only be private while the Owner is a Premium User.
+DROP TRIGGER IF EXISTS onCreateProject ON plenum.Project;
+
+CREATE OR REPLACE FUNCTION plenum.canProjectBePrivate() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+  IF NOT EXISTS (
+    SELECT * FROM plenum.Joined, plenum.UserTable
+    WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner' AND Joined.idUser = UserTable.idUser AND UserTable.premium = true)
+  THEN
+    RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
+  END IF;
+  RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateProject BEFORE UPDATE ON plenum.Project
+FOR EACH ROW
+WHEN (NEW.private IS TRUE)
+EXECUTE PROCEDURE plenum.canProjectBePrivate();
+
+DROP TRIGGER IF EXISTS onUpdateUser ON plenum.UserTable;
+
+CREATE OR REPLACE FUNCTION plenum.updateUserTable() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+  IF EXISTS (
+    SELECT * FROM plenum.Joined, plenum.Project
+    WHERE new.idUser = Joined.idUser AND Joined.role = 'Owner' AND Project.idProject = Joined.idProject AND Project.private = true)
+  THEN
+    RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
+  END IF;
+  RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onUpdateUser BEFORE UPDATE ON plenum.UserTable
+FOR EACH ROW
+WHEN (new.premium = false)
+EXECUTE PROCEDURE plenum.updateUserTable();
+
+-- A Project can only have one owner.
+
+DROP TRIGGER IF EXISTS onCreateJoined ON plenum.UserTable;
+
+CREATE OR REPLACE FUNCTION plenum.onlyOneOwner() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+  IF EXISTS (
+    SELECT * FROM plenum.Joined
+    WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner')
+  THEN
+    RAISE EXCEPTION 'A Project can only have one owner.';
+  END IF;
+  RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateJoined BEFORE INSERT ON plenum.Joined
+FOR EACH ROW
+WHEN (new.role = 'Owner')
+EXECUTE PROCEDURE plenum.onlyOneOwner();
 ```
 [Link to the SQL script included in the repository.](https://github.com/mpcmarques/lbaw1743/blob/master/database/plenum.sql)
 
