A7 permissions and some modules :pencil2:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -11,6 +11,44 @@ This page presents a documentation for Media Library, including the following op
 
 > Define the permissions used by each module, necessary to access its data and features.
 
+<table>
+  <tr>
+    <th>VIS</th>
+    <td>Visitor</td>
+    <td>Unauthenticated user that can sign-up or login.</td>
+  </tr>
+  <tr>
+    <th>USR</th>
+    <td>Authenticated User</td>
+    <td>Group of users that can create and contribute to projects.</td>
+  </tr>
+  <tr>
+    <th>PUSR</th>
+    <td>Premium Authenticated User</td>
+    <td>Group of users that can create and contribute to projects, both private and public.</td>
+  </tr>
+  <tr>
+    <th>MEM</th>
+    <td>Project Member</td>
+    <td>Group of users that can contribute to projects, creating and solving tasks.</td>
+  </tr>
+  <tr>
+    <th>COO</th>
+    <td>Project Coordinator</td>
+    <td>Group of users that can manage all project team members and tasks.</td>
+  </tr>
+  <tr>
+    <th>OWN</th>
+    <td>Project Owner</td>
+    <td>Group of users that has all the project permissions, can delete the project and manage coordinators.</td>
+  </tr>
+  <tr>
+    <th>ADM</th>
+    <td>Website Administrator</td>
+    <td>Group of users that can manage all users and projects.</td>
+  </tr>
+</table>
+
 ## 3. Modules
 
 > Web resources organized by module
@@ -18,7 +56,139 @@ This page presents a documentation for Media Library, including the following op
 > Follow the RESTful resource naming
 > At the end of this page is presented some usual descriptors to document the web resources.
 
-### 3.1 Module 1
+### 3.1 Module M01: Authentication and Individual Profile
+
+#### Endpoints of Module Authentication and Individual Profile
+
+- R101: Login Modal ```/```
+- R102: Login Action ```/``` <!-- TODO -->
+- R103: Logout Action ```/``` <!-- TODO -->
+- R104: Register Modal ```/``` <!-- TODO -->
+- R105: Register Action ```/``` <!-- TODO -->
+- R106: View Profile ```/profile```
+- R107: Edit Profile Modal ```/profile```
+- R108: Edit Profile Action ```/profile``` <!-- TODO -->
+
+#### R101: Login Modal
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Page with a modal to login to a user account.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>  </td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui05-log-in">UI05</a></td>
+  </tr>
+  <tr>
+    <th>SUBMIT</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R102</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
+  </tr>
+</table>
+
+#### R102: Login Action
+
+#### R103: Logout Action
+
+#### R104: Register Modal
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Page with a modal to register a new user account.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>  </td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui06-register">UI06</a></td>
+  </tr>
+  <tr>
+    <th>SUBMIT</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R105</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
+  </tr>
+</table>
+
+#### R105: Register Action
+
+#### R106: View Profile
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/profile</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Page with the user individual profile information.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>  </td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>  </td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui19-profile">UI19</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>USR</td>
+  </tr>
+</table>
+
+#### R107: Edit Profile Modal
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Page with a modal to edit individual profile information.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>  </td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui20-edit-profile">UI20</a></td>
+  </tr>
+  <tr>
+    <th>SUBMIT</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R108</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>USR</td>
+  </tr>
+</table>
+
+#### R108: Edit Profile Action
+
 
 ### 3.2 Module 2
 
