Added more modules

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -189,8 +189,207 @@ This page presents a documentation for Media Library, including the following op
 
 #### R108: Edit Profile Action
 
+### 3.2 Module M02: Dashboard
 
-### 3.2 Module 2
+#### Endpoints of Module Dashboard
+
+- R201: Dashboard Modal```/dashboard/{id}```
+- R202: View Projects ```/dashboard_my_projects/{id}``` 
+- R203: View Tasks ```/dashboard_tasks/{id}``` 
+
+#### R201: Event Modal
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/dashboard/{id}</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Page with a modal to view latest events, the users projects and tasks.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+id:integer</td>
+    <td>User primary key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui07-dashboard">UI05</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>USR</td>
+  </tr>
+</table>
+
+#### R202: View Projects
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/dashboard_my_projects/{id}</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Shows user's projects.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+id:integer</td>
+    <td>User primary key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui08-dashboard-my-projects">UI08</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>USR</td>
+  </tr>
+</table>
+
+#### R203: View Tasks
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/dashboard_my_tasks/{id}</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Shows user's tasks.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+id:integer</td>
+    <td>User primary key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui09-dashboard-my-tasks">UI08</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>USR</td>
+  </tr>
+</table>
+
+
+### 3.3 Module M03: Projects and Project Settings
+
+#### Endpoints of Module Projects and Project Settings
+
+- R301: View Project Tasks ```/dashboard_my_projects/{id}/{idProject}/tasks``` <!-- TODO -->
+- R302: View Project Forum ```/dashboard_my_projects/'project_name'/project_forum``` <!-- TODO -->
+- R303: View Project Dashboard ```/dashboard_my_projects/'project_name'/project_dashboard(project_options)``` <!-- TODO -->
+- R304: Create Project Form ```/dashboard/new_project``` <!-- TODO -->
+- R305: Create Project Action ```/dashboard/new_project``` <!-- TODO -->
+- R306: Create Project Action ```/dashboard/new_project``` <!-- TODO -->
+- R307: View Project Members ```/dashboard_my_projects/'project_name'/project_members``` <!-- TODO -->
+- R308: Remove Project Members Action ```/dashboard_my_projects/'project_name'/project_manage_members``` <!-- TODO -->
+- R309: Edit Project Members Action ```/dashboard_my_projects/'project_name'/project_manage_members``` <!-- TODO -->
+- R310: Create Project Task Form ```/dashboard_my_projects/'project_name'/create_task```
+- R311: Remove Project Task Action ```/dashboard_my_projects/'project_name'/project_manage_tasks```
+- R312: Edit Project Task Form ```/dashboard_my_projects/'project_name'/project_manage_tasks```
+- R313: Edit Project Task Action ```/dashboard_my_projects/'project_name'/project_manage_tasks```
+- R314: View Project Options ```/dashbaord_my_projects/'project_name'/project_options```
+- R315: Browse Files Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R316: Upload Files Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R317: Edit Project Name Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R318: Edit Project Description Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R319: Save Project Changes Action ```/dashbaord_my_projects/'project_name'/project_options```
+
+#### R301: View Project Tasks
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/dashboard_my_projects/{id}/{idProject}/tasks</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Shows user's tasks.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+id:integer</td>
+    <td>User primary key</td>
+  </tr>
+  <tr>
+    <td>+idProject:integer</td>
+    <td>Project primary key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td> --TODO-- </td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>USR</td>
+  </tr>
+</table>
+
+#### R301: View Project Tasks
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/dashboard_my_projectss/{id}/{idProject}/tasks</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Shows user's tasks.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+id:integer</td>
+    <td>User primary key</td>
+  </tr>
+  <tr>
+    <td>+idProject:integer</td>
+    <td>Project primary key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td> --TODO-- </td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>USR</td>
+  </tr>
+</table>
+
+### 3.4 Module M04: Administration
+
+- R401: Admin Login Form ```/admin```
+- R402: Admin Login Action ```/admin```
+- R403: View Projects ```/admin/projects```
+- R404: Edit Projects Form ```/admin/projects/edit```
+- R405: Edit Projects Action ```/admin/projects/edit```
+- R406: Remove Projects Action ```/admin/projects```
+- R407: View Users ```/admin/users```
+- R408: Edit Users Form ```/admin/users/edit```
+- R409: Edit Users Action ```/admin/users/edit```
+- R4010: Remove Users Action ```/admin/users```
+
+
+#### Endpoints of Module Projects and Project Settings
 
 ## 4. JSON/XML Types
 
